--- a/_sass/apentu.scss
+++ b/_sass/apentu.scss
@@ -3,6 +3,9 @@
 @import 'apentu/base';
 @import 'apentu/elements/buttons';
 @import 'apentu/layout/header';
+@import 'apentu/layout/footer';
+@import 'apentu/layout/contact';
 @import 'apentu/layout/home';
 @import 'apentu/layout/sections';
 @import 'apentu/elements/cards';
+@import 'apentu/layout/pricing';
