--- a/_sass/apentu/layout/_sections.scss
+++ b/_sass/apentu/layout/_sections.scss
@@ -1,7 +1,11 @@
 .apentu-section {
-  padding: 20px 0;
+  padding: 60px 0;
 }
 
 .apentu-section--darkblue {
   background-color: $dark-blue-one;
+}
+
+.apentu-section--platinum {
+  background-color: #e6e6ea;
 }
