--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,12 @@
     <div class="wrapper">
         <div class="grid">
             <div class="grid__item">
-                <img class="site-logo" src="{{ "/assets/img/layout/apentu-png.png" | relative_url }}" " alt="Apentu "">
+                <a href="/"><img class="site-logo" src="{{ "/assets/img/layout/apentu-png.png" | relative_url }}" alt="Apentu" ></a>
                 <nav class="main-nav">
                     <ul class="main-navigation">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/pricing">Pricing</a></li>
+                        <li><a href="/contact">Contact</a></li>
                     </ul>
                 </nav>
             </div><!--
