--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
       </div>
     </main>
 
-    <!-- {% include footer.html %}
-
+    {% include footer.html %}
+     <script src="{{ "/assets/js/app.js" | relative_url }}"></script>
   </body>
 
 </html>
