--- a/_layouts/pricing.html
+++ b/_layouts/pricing.html
@@ -11,7 +11,7 @@ layout: default
       </div>
     </div>
     <div class="grid">
-      <div class="grid__item one-third">
+      <div class="grid__item palm--one-whole desk--one-third">
         <div class="pricing-card">
           <div class="pricing-card__header">
             <span class="pricing-card__header__title">Basic</span>
@@ -36,7 +36,7 @@ layout: default
           </div>
         </div>
       </div><!--
-   --><div class="grid__item one-third">
+   --><div class="grid__item palm--one-whole desk--one-third">
         <div class="pricing-card">
           <div class="pricing-card__header">
             <span class="pricing-card__header__title">Standard</span>
@@ -58,8 +58,8 @@ layout: default
           </div>
         </div>
       </div><!--
-   --><div class="grid__item one-third">
-        <div class="pricing-card">
+   --><div class="grid__item palm--one-whole desk--one-third">
+        <div class="pricing-card last-card">
           <div class="pricing-card__header pricing-card__header--premium">
             <span class="pricing-card__header__title">Premium</span>
           </div>
