contact form added

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -5,21 +5,21 @@ layout: default
 <div class="apentu-section apentu-section--platinum">
   <div class="wrapper">
     <div class="grid grid--center">
-      <div class="grid__item two-thirds contact">
+      <div class="grid__item palm--one-whole desk--two-thirds contact">
         <h1>Contact Us</h1>
         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fringilla consequat massa ac lacinia. Nulla rhoncus mi sit amet enim sagittis consequat.</span>
       </div>
     </div>
     <div class="grid">
       <div class="grid__item">
-        <form class="contact-form" action="index.html" method="post">
+        <form class="contact-form" action="https://formspree.io/tim@apentu.com"method="POST">
           <label for="fullname">Full Name</label>
           <input type="text" name="fullname" value="">
           <label for="email">Email</label>
-          <input type="text" name="email" value="">
+          <input type="text" name="_replyto" value="">
           <label for="enquiry">Enquiry</label>
           <textarea name="enquiry" rows="8" cols="80"></textarea>
-          <a class="apentu-btn apentu-btn--fullwidth apentu-btn--lightblue" href="#">Submit Details</a>
+          <input class="apentu-btn apentu-btn--fullwidth apentu-btn--lightblue" type="submit" value="Submit Details">
         </form>
       </div>
     </div>
