form details updated

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -12,11 +12,12 @@ layout: default
     </div>
     <div class="grid">
       <div class="grid__item">
-        <form class="contact-form" action="https://formspree.io/tim@apentu.com"method="POST">
+        <form class="contact-form" action="https://www.formingo.co/submit/tim@apentu.com" method="POST">
           <label for="fullname">Full Name</label>
           <input type="text" name="fullname" value="">
           <label for="email">Email</label>
           <input type="text" name="_replyto" value="">
+          <input type="hidden" name="__redirect" value="https://apentu.github.io">
           <label for="enquiry">Enquiry</label>
           <textarea name="enquiry" rows="8" cols="80"></textarea>
           <input class="apentu-btn apentu-btn--fullwidth apentu-btn--lightblue" type="submit" value="Submit Details">
