Amended homepage information layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,7 +29,7 @@ layout: default
             </div>
         </div><!--
 
-     --><div class="grid__item palm--one-whole desk--one-half">
+     --><div class="grid__item palm--one-whole desk--one-half home-info">
           <h1>Lorem Ipsum</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fringilla consequat massa ac lacinia. Nulla rhoncus mi sit amet enim sagittis consequat. Cras nulla tellus, condimentum vitae semper pellentesque, pellentesque ac nisi. Pellentesque ac sem nec dui sollicitudin rhoncus a tincidunt urna. Donec id placerat velit. Etiam a sem a velit imperdiet euismod. Curabitur vestibulum, neque at vehicula sollicitudin, lacus ex tincidunt quam, in faucibus tellus enim quis felis. Donec cursus dui et libero porta, quis ornare felis bibendum. Sed vehicula ullamcorper massa vel consectetur. Nulla maximus purus leo, sed lacinia arcu consectetur nec. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce at feugiat ligula. Phasellus rutrum diam nec mollis faucibus. Etiam et nisi vitae nulla dapibus imperdiet. </p>
           <p>Donec libero ligula, porttitor ut nisl sed, condimentum aliquam lectus. Donec eget mi ut quam finibus tincidunt. Etiam nec nisl nisl. Nam ac justo et nisl rutrum imperdiet. Morbi ullamcorper arcu id lacus fringilla rhoncus. Maecenas odio nisl, sollicitudin et faucibus bibendum, aliquam et nunc. Donec pulvinar, massa sed pharetra rhoncus, nibh risus pulvinar magna, nec egestas ipsum arcu sed tellus.</p>
