--- a/_sass/apentu/layout/_home.scss
+++ b/_sass/apentu/layout/_home.scss
@@ -83,3 +83,13 @@
     margin-bottom: 40px;
   }
 }
+
+.home-info {
+  h1 {
+    color: $lightblue-one;
+  }
+  @media screen and (max-width: $palm) {
+    text-align: center;
+    margin-top: 15px;
+  }
+}
