pricing page layou amendments

--- a/_layouts/pricing.html
+++ b/_layouts/pricing.html
@@ -5,7 +5,7 @@ layout: default
 <div class="apentu-section apentu-section--platinum">
   <div class="wrapper">
     <div class="grid grid--center">
-      <div class="grid__item two-thirds pricing">
+      <div class="grid__item palm--one-whole desk--two-thirds pricing">
         <h1>Pricing</h1>
         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fringilla consequat massa ac lacinia. Nulla rhoncus mi sit amet enim sagittis consequat.</span>
       </div>
