mobile menu added

--- a/_sass/apentu/layout/_header.scss
+++ b/_sass/apentu/layout/_header.scss
@@ -63,6 +63,9 @@ $header-height: 60px;
 
 .mobile-nav-grid {
   display: block;
+  @media screen and (min-width: $palm) {
+    display: none;
+  }
 }
 
 .mobile-nav {
