--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+published: true
 ---
 
 <div class="apentu-section apentu-section--platinum">
@@ -7,7 +8,7 @@ layout: default
     <div class="grid grid--center">
       <div class="grid__item palm--one-whole desk--two-thirds contact">
         <h1>Contact Us</h1>
-        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fringilla consequat massa ac lacinia. Nulla rhoncus mi sit amet enim sagittis consequat.</span>
+        <span>You can contact us using the form below, or on Facebook Messenger, of course.  </span>
       </div>
     </div>
     <div class="grid">
