--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -8,7 +8,7 @@ published: true
     <div class="grid grid--center">
       <div class="grid__item palm--one-whole desk--two-thirds contact">
         <h1>Contact Us</h1>
-        <span>You can contact us using the form below, or on Facebook Messenger, of course.<a href= "https://www.messenger.com/t/apentubot"> <img scr="/assets/img/layout/messenger.png"></a> </span>
+        <span>You can contact us using the form below, or on Facebook Messenger, of course.<a href= "https://www.messenger.com/t/apentubot"> <img src="/assets/img/layout/messenger.png"></a> </span>
       </div>
     </div>
     <div class="grid">
