--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -8,10 +8,10 @@ published: true
     <div class="grid grid--center">
       <div class="grid__item palm--one-whole desk--two-thirds contact">
         <h1>Contact Us</h1>
-        <span>You can contact us using the form below, or on Facebook Messenger, of course.</span>
+        <span>You can contact us using the form below, or on Facebook Messenger, of course.
        <br />
-    <div><a href= "https://www.messenger.com/t/apentubot"> <img src="/assets/img/layout/facebook-messenger.png" style="width:250px"></a> 
-      </div>
+    <div><a href= "https://www.messenger.com/t/apentubot"> <img src="/assets/img/layout/facebook-messenger.png" style="width:250px"></a> </span>
+    
     </div>
     <div class="grid">
       <div class="grid__item">
