--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -10,7 +10,7 @@ published: true
         <h1>Contact Us</h1>
         <span>You can contact us using the form below, or on Facebook Messenger, of course.
        <br />
-    <div><a href= "https://www.messenger.com/t/apentubot"> <img src="/assets/img/layout/facebook-messenger.png" style="width:250px"></a> </span>
+    <div><a href= "https://www.messenger.com/t/apentubot"> <img src="/assets/img/layout/facebook-messenger.png" style="width:250px" align="center"></a> </span>
     
     </div>
     <div class="grid">
