hero for features added

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,7 +41,7 @@ layout: default
   </div>
 </section>
 <section>
-  <div class="apentu-section apentu-section--darkblue">
+  <div class="apentu-section apentu-section--darkblue hero-features">
     <div class="wrapper">
       <div class="grid grid--center">
         <div class="grid__item palm--one-whole desk--two-thirds features">
@@ -58,8 +58,8 @@ layout: default
         {% endif %}
           <div class="apentu-card">
             <div class="apentu-card__header">
-              <span class="apentu-card__header__title">{{ feature.title }}</span>
               <span class="apentu-card__header__icon">{{ feature.icon }}</span>
+              <span class="apentu-card__header__title">{{ feature.title }}</span>
             </div>
             <div class="apentu-card__content">
               {{ feature.text }}
