--- a/_sass/apentu/layout/_home.scss
+++ b/_sass/apentu/layout/_home.scss
@@ -6,6 +6,14 @@
   min-height: 500px;
 }
 
+.hero-features {
+  background-image: url("/assets/img/layout/StockSnap_O00MGHPXG6.jpg");
+  //padding: 20px 0;
+  background-size: cover;
+  background-position: center;
+  min-height: 500px;
+}
+
 .hero-head {
   h1 {
     color: white;
